[package]
authors = ["pleme-io"]
description = "lava-dependency — typed LavaArchitectureDependency CR + DependencyResolver trait. Models cross-architecture dependencies (BlocksOn | Influences) as a typed DAG; the resolver computes which architectures are ready, blocked, or downstream-of-failure. Emits DependencyBlocked anomalies via lava-anomaly when an upstream is Critical or Failed. Integrates into lava-viggy as an Observe-phase pre-check."
edition = "2024"
license = "MIT"
name = "lava-dependency"
readme = "README.md"
repository = "https://github.com/pleme-io/lava-dependency"
version = "0.1.4"

[lib]
name = "lava_dependency"
path = "src/lib.rs"

[lints.clippy]
pedantic = "warn"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }
thiserror = "2"
lava-outcome-chain = { git = "https://github.com/pleme-io/lava-outcome-chain", branch = "main" }
lava-anomaly = { git = "https://github.com/pleme-io/lava-anomaly", branch = "main" }
lava-drift = { git = "https://github.com/pleme-io/lava-drift", branch = "main" }
